--- a/ToDoJsf/pom.xml
+++ b/ToDoJsf/pom.xml
@@ -54,6 +54,14 @@
 		    <scope>test</scope>
 		</dependency>
 		
+		<!-- JSF -->
+		<dependency>
+		    <groupId>org.glassfish</groupId>
+		    <artifactId>javax.faces</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 </project>
