Adicionando dependência PrimeFaces

--- a/ToDoJsf/pom.xml
+++ b/ToDoJsf/pom.xml
@@ -61,6 +61,13 @@
 		    <version>2.4.0</version>
 		</dependency>
 		
+		<!-- PrimeFaces -->
+		<dependency>
+		    <groupId>org.primefaces</groupId>
+		    <artifactId>primefaces</artifactId>
+		  	<version>8.0</version>
+		</dependency>
+		
 		
 	</dependencies>
 
