--- a/ToDoJsf/pom.xml
+++ b/ToDoJsf/pom.xml
@@ -68,6 +68,19 @@
 			<artifactId>javax.faces</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>2.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.2.15</version>
+		</dependency>
 
 		<!-- CDI -->
 		<dependency>
@@ -81,6 +94,12 @@
 		    <groupId>org.primefaces</groupId>
 		    <artifactId>primefaces</artifactId>
 		    <version>8.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.primefaces.themes</groupId>
+		    <artifactId>all-themes</artifactId>
+		    <version>1.0.10</version>
 		</dependency>
 		
 	</dependencies>
