--- a/ToDoJsf/pom.xml
+++ b/ToDoJsf/pom.xml
@@ -102,6 +102,13 @@
 		    <version>1.0.10</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+		<dependency>
+		    <groupId>javax.annotation</groupId>
+		    <artifactId>javax.annotation-api</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
+		
 	</dependencies>
 
 </project>
