--- a/ToDoJsf/pom.xml
+++ b/ToDoJsf/pom.xml
@@ -30,14 +30,14 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<repositories>
-        <repository>
-            <id>prime-repo</id>
-            <name>Prime Repo</name>
-            <url>http://repository.primefaces.org/</url>
-        </repository>
-    </repositories>
+		<repository>
+			<id>prime-repo</id>
+			<name>Prime Repo</name>
+			<url>http://repository.primefaces.org/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<!-- Hibernate -->
@@ -68,7 +68,7 @@
 			<artifactId>javax.faces</artifactId>
 			<version>2.4.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.faces</groupId>
 			<artifactId>jsf-api</artifactId>
@@ -88,27 +88,34 @@
 			<artifactId>cdi-api</artifactId>
 			<version>1.2</version>
 		</dependency>
-		
+
 		<!-- PrimeFaces -->
 		<dependency>
-		    <groupId>org.primefaces</groupId>
-		    <artifactId>primefaces</artifactId>
-		    <version>8.0</version>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>8.0</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.primefaces.themes</groupId>
-		    <artifactId>all-themes</artifactId>
-		    <version>1.0.10</version>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>all-themes</artifactId>
+			<version>1.0.10</version>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+
+		<!-- API Java de Anotações -->
 		<dependency>
-		    <groupId>javax.annotation</groupId>
-		    <artifactId>javax.annotation-api</artifactId>
-		    <version>1.3.2</version>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
 		</dependency>
-		
+
+		<!-- Omnifaces -->
+		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+			<version>1.11</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
