--- a/ToDoJsf/pom.xml
+++ b/ToDoJsf/pom.xml
@@ -56,11 +56,18 @@
 
 		<!-- JUnit -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
-		</dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.4.1</version>
+            <scope>test</scope>
+        </dependency>
+        
+<!--         <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>1.4.1</version>
+            <scope>test</scope>
+        </dependency> -->
 
 		<!-- JSF -->
 		<dependency>
