--- a/ToDoJsf/src/main/webapp/WEB-INF/web.xml
+++ b/ToDoJsf/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,11 @@
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
+	
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>vader</param-value>
+	</context-param>
 
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
